--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,14 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <button id="subscribe">Subscribe</button>
-  <button>Join</button>
-  <button>Tweet</button>
-</body>
-</html>
+<style>
+  .subscribe-button {
+    background-color: rgb(200, 0, 0);
+    color: white;
+    border: none;
+    height: 36px;
+    width: 105px;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-right: 8px;
+  }
+
+  .join-button {
+    background-color: white;
+    border-color: rgb(42, 109, 186);
+    border-style: solid;
+    border-width: 1px;
+    color: rgb(42, 109, 186);
+    height: 36px;
+    width: 62px;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+
+  .tweet-button {
+    color: white;
+    background-color: rgb(2, 158, 255);
+    border: none;
+    height: 36px;
+    width: 74px;
+    border-radius: 18px;
+    font-size: 15px;
+    cursor: pointer;
+    margin-left: 8px;
+  }
+</style> 
+
+<button class="subscribe-button">
+  SUBSCRIBE
+</button>
+
+<button class="join-button">
+  JOIN
+</button>
+
+<button class="tweet-button">
+  TWEET
+</button>
+
